--- a/src/components/SortDropdown/SortDropdown.module.css
+++ b/src/components/SortDropdown/SortDropdown.module.css
@@ -100,12 +100,12 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.dropdownContent button:hover,
+/* .dropdownContent button:hover,
 .dropdownContent button:active {
   background-color: var(--dark-hover);
   transform: scale(1.1);
   transition: transform 0.3s ease;
-}
+} */
 
 .sortButton svg,
 .orderButton svg,
