--- a/src/components/ReviewItem/ReviewItem.module.css
+++ b/src/components/ReviewItem/ReviewItem.module.css
@@ -1,3 +1,4 @@
+/* ReviewItem.module.css */
 .reviewItem {
   flex: 0 0 auto;
   width: 200px;
@@ -12,6 +13,7 @@
   display: flex;
   flex-direction: column;
   min-height: 400px;
+  scroll-snap-align: start;
 }
 
 .reviewItem.visible {
@@ -36,7 +38,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: transform var(--transition-normal);
 }
 
 .reviewOverlay {
@@ -74,13 +75,16 @@
   color: var(--light-primary);
 }
 
-.reviewItem:hover .reviewImage,
-.reviewItem:focus .reviewImage {
-  transform: scale(1.05);
-}
-
 .ratingBar {
   height: 5px;
   width: 100%;
   margin-top: auto;
+}
+
+@media (max-width: 768px) {
+  .reviewItem {
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
 }
