--- a/src/components/ReviewPopup/ReviewPopup.module.css
+++ b/src/components/ReviewPopup/ReviewPopup.module.css
@@ -1,3 +1,4 @@
+/* ReviewPopup.module.css */
 .reviewPopup {
   position: fixed;
   top: 0;
@@ -7,7 +8,9 @@
   max-width: 600px;
   background-color: var(--dark-primary);
   color: var(--light-primary);
-  z-index: 1000;
+  font-family: var(--font-body);
+  z-index: var(--z-index-modal);
+  transition: transform var(--transition-normal);
   transform: translateX(100%);
   display: flex;
   flex-direction: column;
@@ -16,12 +19,6 @@
 
 .reviewPopup.open {
   transform: translateX(0);
-  transition: transform 0.3s ease-out;
-}
-
-.reviewPopup.swipeAnimation {
-  transform: translateX(100%);
-  transition: transform 0.3s ease-out;
 }
 
 .reviewPopup.mobile {
@@ -163,15 +160,6 @@
 
 .deleteButton:hover {
   background-color: var(--delete-button-hover);
-}
-
-@keyframes swipeOut {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
 }
 
 @media (max-width: 768px) {
