--- a/src/pages/MediaReviews/MediaReviews.module.css
+++ b/src/pages/MediaReviews/MediaReviews.module.css
@@ -37,22 +37,63 @@
   position: relative;
 }
 
+.gradientLeft,
+.gradientRight {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 150px;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+  z-index: 2;
+}
+
+.gradientLeft {
+  left: 0;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.gradientRight {
+  right: 0;
+  background: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.gradientShow {
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .gradientLeft,
+  .gradientRight {
+    display: none;
+  }
+}
+
 .scrollArrow {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   font-size: var(--font-size-2xl);
   color: var(--light-primary);
-  opacity: 0.7;
-  z-index: 2;
+  z-index: 3;
+  padding: 2rem;
+  pointer-events: auto;
 }
 
 .scrollArrowLeft {
-  left: var(--spacing-xl);
+  left: 1rem;
 }
 
 .scrollArrowRight {
-  right: var(--spacing-xl);
+  right: 1rem;
 }
 
 .reviewList {
@@ -86,7 +127,7 @@
   border: none;
   padding: var(--spacing-sm) var(--spacing-xl);
   border-radius: var(--border-radius-sm);
-  cursor: pointer;
+  /* cursor: pointer; */
   font-size: var(--font-size-base);
   transition: background-color var(--transition-normal);
 }
@@ -129,7 +170,9 @@
     font-size: var(--font-size-2xl);
   }
 
-  .scrollArrow {
+  .scrollArrow,
+  .gradientLeft,
+  .gradientRight {
     display: none;
   }
 }
