--- a/src/pages/MediaReviews/MediaReviews.module.css
+++ b/src/pages/MediaReviews/MediaReviews.module.css
@@ -1,4 +1,10 @@
-/* MediaReviews.module.css */
+.pageWrapper {
+  flex: 1;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  margin-top: 60px; /* Height of header */
+}
+
 .mediaReviews {
   background-color: var(--dark-primary);
   color: var(--light-primary);
@@ -35,6 +41,7 @@
 
 .reviewListContainer {
   position: relative;
+  margin-bottom: var(--spacing-2xl);
 }
 
 .gradientLeft,
@@ -71,13 +78,6 @@
   opacity: 1;
 }
 
-@media (max-width: 768px) {
-  .gradientLeft,
-  .gradientRight {
-    display: none;
-  }
-}
-
 .scrollArrow {
   position: absolute;
   top: 50%;
@@ -103,7 +103,6 @@
   overflow-x: auto;
   gap: var(--spacing-lg);
   padding: var(--spacing-sm) 0;
-  -webkit-overflow-scrolling: touch;
   scroll-snap-type: x proximity;
   margin: 0 -var(--spacing-md);
   padding: 0 var(--spacing-md);
@@ -124,7 +123,6 @@
   border: none;
   padding: var(--spacing-sm) var(--spacing-xl);
   border-radius: var(--border-radius-sm);
-  /* cursor: pointer; */
   font-size: var(--font-size-base);
   transition: background-color var(--transition-normal);
 }
@@ -154,7 +152,6 @@
 @media (max-width: 768px) {
   .mediaReviews {
     padding: var(--spacing-md);
-    height: 100vh;
   }
 
   .reviewList {
