--- a/src/pages/MediaReviews/MediaReviews.module.css
+++ b/src/pages/MediaReviews/MediaReviews.module.css
@@ -1,4 +1,4 @@
-.pageWrapper {
+.mediaReviewsContainer {
   flex: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
@@ -104,8 +104,8 @@
   gap: var(--spacing-lg);
   padding: var(--spacing-sm) 0;
   scroll-snap-type: x proximity;
-  margin: 0 var(--spacing-md);
-  padding: 0 var(--spacing-md);
+  margin: 0;
+  padding: 0;
   scrollbar-width: none;
   /*top padding is for the review item hover animation*/
   padding-top: 5px;
