--- a/src/components/MediaReviews/MediaReviews.module.css
+++ b/src/components/MediaReviews/MediaReviews.module.css
@@ -1,15 +1,16 @@
 .mediaReviewsContainer {
-  flex: 1;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  margin-top: 60px; /* Height of header */
+  background-color: var(--dark-primary);
+  color: var(--light-primary);
+  font-family: var(--font-body);
+  /* padding: var(--spacing-2xl) var(--spacing-md); */
+  padding-bottom: var(--spacing-3xl);
 }
 
 .mediaReviews {
   background-color: var(--dark-primary);
   color: var(--light-primary);
   font-family: var(--font-body);
-  padding: var(--spacing-2xl) var(--spacing-md);
+  padding: 0 0 var(--spacing-2xl) var(--spacing-md);
   padding-bottom: var(--spacing-3xl);
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: none;
@@ -103,10 +104,10 @@
   overflow-x: auto;
   gap: var(--spacing-lg);
   padding: var(--spacing-sm) 0;
-  scroll-snap-type: x proximity;
   margin: 0;
   padding: 0;
   scrollbar-width: none;
+  scroll-snap-type: x mandatory;
   /*top padding is for the review item hover animation*/
   padding-top: 5px;
 }
