--- a/src/components/MediaLayout/MediaLayout.module.css
+++ b/src/components/MediaLayout/MediaLayout.module.css
@@ -27,14 +27,14 @@
   width: 100%;
   height: 100%;
   min-height: 300px;
-  overflow: hidden;
+  overflow: auto;
   background-color: var(--dark-primary);
 }
 
 .image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   display: block;
 }
 
@@ -45,34 +45,11 @@
 
 .blockTwo {
   grid-column: 3 / 6;
-  grid-row: 2 / 4;
+  grid-row: 2 / 2;
 }
-
 .blockThree {
-  grid-column: 1 / 3;
-  grid-row: 3 / 5;
-}
-
-.blockFour {
-  grid-column: 3 / 4;
-  grid-row: 4 / 5;
-  display: flex;
-  align-items: center;
-}
-
-.blockFive {
-  grid-column: 4 / 6;
-  grid-row: 4 / 6;
-}
-
-.blockSix {
-  grid-column: 1 / 4;
-  grid-row: 5 / 7;
-}
-
-.blockSeven {
-  grid-column: 4 / 6;
-  grid-row: 6 / 7;
+  grid-column: 3 / 6;
+  grid-row: 3 / 3;
 }
 
 @media (max-width: 1024px) {
