added easteregg type of thing of this youtube video I found that I liked

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -15,6 +15,10 @@
   margin: 0 auto;
   padding: 0 24px;
 }
+a {
+  text-decoration: none;
+  color: var(--light-primary);
+}
 
 .titleArea {
   grid-column: 1 / 4;
